[gd_scene load_steps=7 format=3 uid="uid://cvjq0rcqv4j3c"]

[ext_resource type="Script" uid="uid://bagxguop50tmo" path="res://ui/control.gd" id="1_2mc8b"]
[ext_resource type="Texture2D" uid="uid://bfrm6ktpf3see" path="res://sprites/controls/controls2.png" id="1_elkka"]
[ext_resource type="Texture2D" uid="uid://dsjvmqc813dp1" path="res://sprites/controls/controls1.png" id="2_sq3tw"]
[ext_resource type="Texture2D" uid="uid://bo4yrajv2c8cs" path="res://sprites/controls/controls4.png" id="3_rwsqr"]
[ext_resource type="Texture2D" uid="uid://ilx54uq01j0a" path="res://sprites/controls/controls3.png" id="4_qh227"]
[ext_resource type="Texture2D" uid="uid://d4nkhj8jtjw1e" path="res://sprites/controls/controls5.png" id="6_sm8s4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2mc8b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="left" type="TouchScreenButton" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(53, 500)
scale = Vector2(3, 3)
texture_normal = ExtResource("1_elkka")
action = "left"

[node name="right" type="TouchScreenButton" parent="CanvasLayer"]
texture_filter = 1
position = Vector2(283, 500)
scale = Vector2(3, 3)
texture_normal = ExtResource("2_sq3tw")
action = "right"

[node name="call" type="TouchScreenButton" parent="CanvasLayer" groups=["call button"]]
visible = false
z_index = 100
texture_filter = 1
position = Vector2(850, 500)
scale = Vector2(3, 3)
texture_normal = ExtResource("3_rwsqr")
action = "follow"

[node name="pick_up" type="TouchScreenButton" parent="CanvasLayer" groups=["pick button"]]
z_index = 100
texture_filter = 1
position = Vector2(1045.155, 500)
scale = Vector2(3, 3)
texture_normal = ExtResource("4_qh227")
action = "pick_up"

[node name="enter" type="TouchScreenButton" parent="CanvasLayer" groups=["enter"]]
visible = false
z_index = 100
texture_filter = 1
position = Vector2(1044.21, 383.21)
scale = Vector2(3, 3)
texture_normal = ExtResource("6_sm8s4")
action = "enter"

[connection signal="pressed" from="CanvasLayer/left" to="." method="_on_left_pressed"]
[connection signal="released" from="CanvasLayer/left" to="." method="_on_left_released"]
[connection signal="pressed" from="CanvasLayer/right" to="." method="_on_right_pressed"]
[connection signal="released" from="CanvasLayer/right" to="." method="_on_right_released"]
[connection signal="pressed" from="CanvasLayer/call" to="." method="_on_call_pressed"]
[connection signal="released" from="CanvasLayer/call" to="." method="_on_call_released"]
[connection signal="pressed" from="CanvasLayer/pick_up" to="." method="_on_pick_up_pressed"]
[connection signal="released" from="CanvasLayer/pick_up" to="." method="_on_pick_up_released"]
[connection signal="pressed" from="CanvasLayer/enter" to="." method="_on_enter_pressed"]
[connection signal="released" from="CanvasLayer/enter" to="." method="_on_enter_released"]
